--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   flutter_local_notifications: ^17.2.3
   flutter_riverpod: ^3.0.3
   riverpod: ^3.0.3
+  permission_handler: ^11.1.0  # Para manejar permisos del sistema operativo
+  http: ^1.1.0                # Para peticiones HTTP
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
